--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 passlib==1.7.4
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.9.2
@@ -47,3 +47,11 @@ typing_extensions==4.12.2
 uvicorn==0.32.0
 watchfiles==0.24.0
 websockets==14.1
+authlib==1.3.2
+pandas==2.2.3
+joblib==1.4.2
+scikit-learn==1.3.1
+itsdangerous==2.2.0
+google-ai-generativelanguage==0.6.10
+pyjwt==2.8.0
+google-generativeai==0.8.3
