--- a/.env.production
+++ b/.env.production
@@ -1,11 +1,11 @@
 # Environment
-ENVIRONMENT=development
+ENVIRONMENT=production
 
 # Database Configuration
-POSTGRESQL_USER=postgres
-POSTGRESQL_PASSWORD=Lymann-2
-POSTGRESQL_DB=fastapi
-POSTGRESQL_SERVER=localhost
+POSTGRESQL_USER=myuser
+POSTGRESQL_PASSWORD=mypassword
+POSTGRESQL_DB=normplov_fastapi
+POSTGRESQL_SERVER=35.184.117.213
 POSTGRESQL_PORT=5432
 
 # App Configuration
@@ -21,12 +21,12 @@ EMAIL_PASSWORD=dqon ivdr jnbn ilvz
 EMAIL_USE_TLS=true
 
 # Debug Settings
-DEBUG=True
+DEBUG=False
 
 # Google Configuration
 GOOGLE_CLIENT_ID=426697838308-qihuet2qbmidfrr2ih22tp72803dhth0.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT_URI=http://localhost:8000/auth/google/callback
+GOOGLE_REDIRECT_URI=http://35.184.117.213/auth/google/callback
 
 # Google API Key
 GOOGLE_GENERATIVE_AI_KEY=AIzaSyBs8q5cZDyFDPVqiN5JJ8loS_Qt2SiHsRk
