--- a/.env
+++ b/.env
@@ -30,3 +30,8 @@ GOOGLE_REDIRECT_URI=http://localhost:8000/auth/google/callback
 
 # Google API Key
 GOOGLE_GENERATIVE_AI_KEY=AIzaSyBs8q5cZDyFDPVqiN5JJ8loS_Qt2SiHsRk
+
+# Telegram Chatbot
+TELEGRAM_BOT_TOKEN=7747910734:AAHKkDzr54-oMuRs7SuEvN13MxmUBKB6QxM
+TELEGRAM_CHAT_ID=1299615474
+
