--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: norm_plov_api_container
     restart: always
     ports:
-      - "8000:8000"  
+      - "3300:8000"
     environment:
-      DATABASE_URL: postgresql+asyncpg://postgres:password@34.142.183.32:5433/fastapi
+      DATABASE_URL: postgresql+asyncpg://postgres:password@136.228.158.126:3299/postgres
     depends_on: []
