--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ ENVIRONMENT=development
 # Database Configuration
 POSTGRESQL_USER=postgres
 POSTGRESQL_PASSWORD=password
-POSTGRESQL_DB=fastapi
+POSTGRESQL_DB=postgres
 POSTGRESQL_SERVER=136.228.158.126
 POSTGRESQL_PORT=3299
 
