add some more methods to job management

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,11 @@
 # Environment
 ENVIRONMENT=production
 
+# File Upload Configuration
+ALLOWED_EXTENSIONS=jpg,png,jpeg,web,gif
+MAX_FILE_SIZE=5242880
+BASE_UPLOAD_FOLDER=uploads
+
 # Database Configuration
 POSTGRESQL_USER=postgres
 POSTGRESQL_PASSWORD=password
@@ -30,3 +35,5 @@ GOOGLE_REDIRECT_URI=http://35.184.117.213/auth/google/callback
 
 # Google API Key
 GOOGLE_GENERATIVE_AI_KEY=AIzaSyBs8q5cZDyFDPVqiN5JJ8loS_Qt2SiHsRk
+
+
