--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
 # Environment
 ENVIRONMENT=development
 
+# File Upload Configuration
+MAX_FILE_SIZE=5242880
+BASE_UPLOAD_FOLDER=uploads
+ALLOWED_EXTENSIONS=["jpg", "png", "jpeg", "web", "gif"]
+
 # Database Configuration
 POSTGRESQL_USER=postgres
 POSTGRESQL_PASSWORD=password
@@ -34,4 +39,5 @@ GOOGLE_GENERATIVE_AI_KEY=AIzaSyBs8q5cZDyFDPVqiN5JJ8loS_Qt2SiHsRk
 # Telegram Chatbot
 TELEGRAM_BOT_TOKEN=7747910734:AAHKkDzr54-oMuRs7SuEvN13MxmUBKB6QxM
 TELEGRAM_CHAT_ID=1299615474
+
 
