update create job method

--- a/.env
+++ b/.env
@@ -40,4 +40,7 @@ GOOGLE_GENERATIVE_AI_KEY=AIzaSyBs8q5cZDyFDPVqiN5JJ8loS_Qt2SiHsRk
 TELEGRAM_BOT_TOKEN=7747910734:AAHKkDzr54-oMuRs7SuEvN13MxmUBKB6QxM
 TELEGRAM_CHAT_ID=1299615474
 
+# GOOGLE MAP CONFIGURATION
+GOOGLE_MAPS_API_KEY=AIzaSyAgXjsPtFKcd6zMTtXiqxNU6xHDYWd5b50
+
 
