allow extension svg when upload file

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ ENVIRONMENT=development
 # File Upload Configuration
 MAX_FILE_SIZE=5242880
 BASE_UPLOAD_FOLDER=uploads
-ALLOWED_EXTENSIONS=["jpg", "png", "jpeg", "web", "gif"]
+ALLOWED_EXTENSIONS=["jpg", "png", "jpeg", "web", "gif", "svg"]
 
 # Database Configuration
 POSTGRESQL_USER=postgres
