change email in env file from personal to NormPlov official email

--- a/.env
+++ b/.env
@@ -21,8 +21,8 @@ ACCESS_TOKEN_EXPIRE_MINUTES=3
 # Gmail Configuration
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_SENDER=lymannphy9@gmail.com
-EMAIL_PASSWORD=dqon ivdr jnbn ilvz
+EMAIL_SENDER=normplov.istad@gmail.com
+EMAIL_PASSWORD=jmve hjoo lqix gaec
 EMAIL_USE_TLS=true
 
 # Debug Settings
