generate sherable link

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # UI Base URL
-UI_BASE_URL=https://normplov-api.shinoshike.studio
+UI_BASE_URL=https://dev-normplov.shinoshike.studio
 
 # Environment
 ENVIRONMENT=development
