--- a/.env
+++ b/.env
@@ -34,7 +34,7 @@ DEBUG=True
 # Google Configuration
 GOOGLE_CLIENT_ID=426697838308-qihuet2qbmidfrr2ih22tp72803dhth0.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT_URI=http://localhost:8000/auth/google/callback
+GOOGLE_REDIRECT_URI=https://normplov-api.shinoshike.studio/api/v1/auth/google/callback
 
 # Google API Key
 GOOGLE_GENERATIVE_AI_KEYS=["AIzaSyDLz0bS0Bm1z-km6XeuUX6lQKxqa9ZuJlw","AIzaSyCngw122HwlYXb7pw4e3d73pV0cCnpO-5Q","AIzaSyCSVep7n0v44RTJqpoa0bjBTq53tRwHIVQ","AIzaSyDci_Eu8dYYGRK8ZBwWA30GFwZWsueFIFc","AIzaSyCV1ToJ7FCiPNF1rtkvs5x0chubTB8ykwE","AIzaSyAK8iUOjxFkmlO1LBaOqc3NyQI_o4n8a2Y"]
