--- a/.env
+++ b/.env
@@ -34,7 +34,7 @@ DEBUG=True
 # Google Configuration for Login
 GOOGLE_CLIENT_ID=426697838308-qihuet2qbmidfrr2ih22tp72803dhth0.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT_URI=http://127.0.0.1:8000/api/v1/auth/google/callback
+GOOGLE_REDIRECT_URI=https://normplov-api.shinoshike.studio/api/v1/auth/google/callback
 
 FACEBOOK_CLIENT_ID=951278136768463
 FACEBOOK_CLIENT_SECRET=c030af0fb98a710b2ff3009e6484649b
