--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # UI Base URL
 UI_BASE_URL=https://dev-normplov.shinoshike.studio
+FRONTEND_URL=http://localhost:3000
 
 # Environment
 ENVIRONMENT=development
@@ -35,7 +36,6 @@ DEBUG=True
 # Google Configuration for Login
 GOOGLE_CLIENT_ID=584934236339-5bjir3arta5iumk19q9j2vuaejp0b9bl.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT_URI=http://127.0.0.1:8000/api/v1/auth/google/callback
 
 FACEBOOK_CLIENT_ID=951278136768463
 FACEBOOK_CLIENT_SECRET=c030af0fb98a710b2ff3009e6484649b
