change the ui url to production

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 # UI Base URL
-UI_BASE_URL=https://dev-normplov.shinoshike.studio
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://normplov.istad.co
 
 # Environment
 ENVIRONMENT=development
