modify some method of assessments

--- a/.env
+++ b/.env
@@ -9,12 +9,13 @@ MAX_FILE_SIZE=5242880
 BASE_UPLOAD_FOLDER=uploads
 ALLOWED_EXTENSIONS=["jpg", "png", "jpeg", "webp", "gif", "svg"]
 
-# Database Configuration
+# Database Configuration for Production
 POSTGRESQL_USER=postgres
 POSTGRESQL_PASSWORD=password
 POSTGRESQL_DB=postgres
 POSTGRESQL_SERVER=202.178.125.77
 POSTGRESQL_PORT=3299
+
 
 # App Configuration
 JWT_SECRET=-vv7YfCkPifps-Vg7sc-dOXHzImbV3sN8NJN-vfTiBuDCmzTtCVHMHGNhQJ5FsvIbk3Q8hyKClFRW_DnZ7uswQ
