--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # UI Base URL
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://normplov.istad.co
 
 # Environment
 ENVIRONMENT=development
@@ -34,8 +34,8 @@ EMAIL_USE_TLS=true
 DEBUG=True
 
 # Google Configuration for Login
-GOOGLE_CLIENT_ID=584934236339-3vi3jlni3shmbp6mpm4n0qliaqqnacei.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=107214117957-smkgsvj5i85ouodt96dtc39asielp0r9.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
 FACEBOOK_CLIENT_ID=1309913893528317
 FACEBOOK_CLIENT_SECRET=2dc9008b78c8ce36c14e66304971353c
