--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # UI Base URL
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://normplov.istad.co
 
 # Environment
 ENVIRONMENT=development
@@ -34,8 +34,10 @@ EMAIL_USE_TLS=true
 DEBUG=True
 
 # Google Configuration for Login
-GOOGLE_CLIENT_ID=107214117957-smkgsvj5i85ouodt96dtc39asielp0r9.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+# GOOGLE_CLIENT_ID=107214117957-smkgsvj5i85ouodt96dtc39asielp0r9.apps.googleusercontent.com
+# GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=917422990561-q0dov20sv7dpr8fj2p0u8a19ilql9o8g.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
 FACEBOOK_CLIENT_ID=1309913893528317
 FACEBOOK_CLIENT_SECRET=2dc9008b78c8ce36c14e66304971353c
