--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # UI Base URL
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://normplov.istad.co
 
 # Environment
 ENVIRONMENT=development
@@ -8,6 +8,7 @@ ENVIRONMENT=development
 MAX_FILE_SIZE=5242880
 BASE_UPLOAD_FOLDER=uploads
 ALLOWED_EXTENSIONS=["jpg", "png", "jpeg", "webp", "gif", "svg"]
+
 
 # Database Configuration for Production
 POSTGRESQL_USER=postgres
